# agent-acceptance-trace

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: closeout.md  proof-packet.json  sample.diff  task-contract.md
src/agent_acceptance_trace/: __init__.py  cli.py
tests/: test_cli.py
